syntax = "proto3";

option csharp_namespace = "grpcMessageServerStream";

package message_stream;

service MessageStream {
  rpc SendMessage (MessageRequest) returns (stream MessageReply);
}

message MessageRequest {
  string name = 1;
  string message = 2;
  string token = 3;
}

message MessageReply {
  string message = 1;
}
